Compatible with forge 1.17.1-37.0.24. Support OptiFine_1.17.1_HD_U_G9_pre33.